--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -1,7 +1,7 @@
 html, body {
-    height: 100%;
     -webkit-user-select: text;
     padding: 5px;
+    height: 100%;
 }
 
 ::-webkit-scrollbar {
@@ -26,5 +26,162 @@ html, body {
 
 .buffer {
     overflow-y: scroll;
+    /*white-space: pre-wrap;*/
+    padding: 6px 12px;
+    border: 1px solid #5e5e5e;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
+    background-color: #0c0c0c;
+}
+
+.game-content {
     white-space: pre-wrap;
+}
+
+.flex, .flex-column {
+    display: flex;
+    height: 100%;
+}
+
+.flex-column {
+    flex-direction: column;
+}
+
+.main-window {
+    flex: 1;
+    height: 100%;
+    margin-right: 10px;
+}
+
+#header {
+    margin-bottom: 10px;
+}
+
+#ng-view {
+    height: 100%;
+}
+
+#thoughts {
+    height: 25%;
+    margin-bottom: 10px;
+}
+
+#game {
+    flex: 1;
+    margin-bottom: 10px;
+}
+
+#logons {
+    flex: 0.50;
+    margin-bottom: 10px;
+}
+
+#charinfo {
+    flex: 1;
+    margin-bottom: 10px;
+}
+
+#settings {
+    height: 30px;
+}
+
+#bottom {
+    position: relative;
+    display: flex;
+}
+
+#command {
+    flex: 0.75;
+    width: 100%;
+}
+
+#command input {
+    position: relative;
+    z-index: 2;
+    left: 0;
+    top: 0;
+    background-color: #0c0c0c;
+    border: 1px solid #5e5e5e;
+    color: #ccc;
+    opacity: 0.8;
+    border-radius: 4px;
+}
+
+#command input:focus {
+    border: 1px solid #5e5e5e;
+}
+
+#command progress {
+    position: absolute;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    height: 34px;
+    border-radius: 4px;
+    width: 100%;
+}
+
+#command progress::-webkit-progress-bar {
+    border-radius: 4px;
+}
+
+#command progress::-webkit-progress-value {
+    border-radius: 4px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25) inset;
+}
+
+#command progress.hard::-webkit-progress-value {
+    background: darkred;
+}
+
+#command progress.soft::-webkit-progress-value {
+    background: darkblue;
+}
+
+#command progress.stun::-webkit-progress-value {
+    background: yellow;
+}
+
+#extra {
+    flex: 0.25;
+    padding-left: 10px;
+    width: 100%;
+}
+
+#status {
+    margin-bottom: 10px;
+    font-size: 12px;
+}
+
+#status span {
+    position: relative;
+}
+
+#status span span {
+    position: absolute;
+    left: 3px;
+    font-weight: bold;
+    text-shadow: 0 0 4px #000;
+}
+
+#status progress {
+    width: 100px;
+    height: 18px;
+    background-color: #0c0c0c;
+}
+
+#status progress::-webkit-progress-bar {
+    background-color: #5c5c5c;
+    border-radius: 4px;
+}
+
+#status progress::-webkit-progress-value {
+    border-radius: 4px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25) inset;
+}
+
+#status .stamina span {
+    color: black;
+    text-shadow: 0 0 4px #fff;
 }
