--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -84,12 +84,16 @@ html, body {
 }
 
 #top-window {
-    height: 17%;
+    height: 25%;
     margin-bottom: 10px;
 }
 
 #thoughts {
     flex: 1;
+}
+
+#room_objs {
+    width: 35%;
 }
 
 #game-window {
@@ -115,6 +119,7 @@ html, body {
 
 #game {
     flex: 1;
+    white-space: pre-wrap;
 }
 
 #logons {
@@ -122,14 +127,13 @@ html, body {
     overflow: hidden;
 }
 
-#room_objs {
-    flex: 1;
+#hands {
+    margin-top: 3px;
 }
 
 #command {
     width: 100%;
-    margin-top: 5px;
-    margin-bottom: 5px;
+    margin: 0;
     position: relative;
 }
 
@@ -193,31 +197,22 @@ html, body {
 }
 
 #indicators {
-    margin-bottom: 5px;
+    background-color: #000;
+    padding: 0 0 0 2px;
 }
 
-#indicators .invisible {
-    color: #0c0c0c;
+#indicators img {
+    vertical-align: baseline;
 }
 
-#position {
-    width: 48px;
+#indicators .off {
+    color: #000;
 }
 
-#position.standing {
-    background: url('/asset/img/standing.png') no-repeat;
-}
-
-#position.prone {
-    background: url('/asset/img/prone.png') no-repeat;
-}
-
-#position.kneeling {
-    background: url('/asset/img/kneeling.png') no-repeat;
-}
-
-#position.sitting {
-    background: url('/asset/img/sitting.png') no-repeat;
+#position-img, #visibility-img {
+    width: 28px;
+    height: 28px;
+    margin-top: 2px;
 }
 
 .status div {
