--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -1,64 +1,20 @@
 html {
-    border: 3px solid #282828;
-    -webkit-border-radius: 10px;
+    border: 5px solid #212121;
 }
 
 html, body {
-    -webkit-user-select: text;
-    padding: 5px;
     height: 100%;
+    -webkit-user-select: auto;
+    padding: 0 8px 0 8px;
 }
 
-.bordered {
-    padding: 6px 12px;
-    border: 1px solid #5e5e5e;
-    border-radius: 4px;
-    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
-    box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
-    background-color: #0c0c0c;
+progress {
+    color: #0063a6;
+    background: transparent;
+    width: 100%;
 }
 
-#left-hand {
-    background: url('/asset/img/left_hand.png') no-repeat;
-    text-indent: 20px;
-    vertical-align: middle;
-    margin-right: 5px;
-}
-
-#right-hand {
-    background: url('/asset/img/right_hand.png') no-repeat;
-    text-indent: 20px;
-    vertical-align: middle;
-    margin-right: 5px;
-}
-
-#casting {
-    background: url('/asset/img/spell_ready.png') no-repeat;
-    text-indent: 20px;
-    vertical-align: middle;
-}
-
-.bleeding {
-    color: red;
-}
-
-.diseased {
-    color: purple;
-}
-
-.poisoned {
-    color: green;
-}
-
-.buffer {
-    overflow-y: scroll;
-    overflow-x: hidden;
-}
-
-.game-content {
-    white-space: pre-wrap;
-}
-
+/** Generic Classes */
 .flex, .flex-column {
     display: flex;
 }
@@ -67,178 +23,185 @@ html, body {
     flex-direction: column;
 }
 
+.overflow {
+    overflow-x: hidden;
+    overflow-y: scroll;
+}
+
 .ng-hide {
-    display: none!important;
+    display: none;
 }
 
-#main-window {
-    height: 100%;
-}
-
-#header {
-    margin-bottom: 10px;
-}
-
+/* Main Angular Window */
 #ng-view {
     height: 100%;
 }
 
-#top-window {
-    height: 25%;
-    margin-bottom: 10px;
-}
 
-#thoughts {
-    flex: 1;
-}
-
-#room_objs {
-    width: 35%;
-}
-
-#game-window {
-    flex: 1;
-    margin-bottom: 10px;
-}
-
-#left {
-    margin-right: 5px;
-    padding-left: 0;
-    padding-right: 0;
-}
-
-#right {
-    margin-left: 5px;
-    padding-left: 0;
-    padding-right: 0;
-}
-
-#middle {
-    flex: 1;
-}
-
+/* Game Window */
 #game {
-    flex: 1;
-    white-space: pre-wrap;
+    height: 100%;
+    padding: 13px 15px;
 }
 
-#logons {
-    flex: 1;
+#game-top {
+    flex: 0 0 15%;
+    height: 15%;
+}
+
+#game-logons {
+    flex: 1 0 auto;
     overflow: hidden;
 }
 
-#hands {
+#game-bottom {
+    flex: 1 0 auto;
+}
+
+#game-top-thoughts, #game-top-roomobjs {
+    height: 100%;
+}
+
+#game-left {
+    flex: 1 1 125px;
+    width: 100%;
+}
+
+#game-main {
+    flex: 1 1 auto;
+    width: 100%;
+}
+
+#game-main-output {
+    flex: 1 0 auto;
+    height: 100%;
+    padding: 5px 0 5px 0;
+}
+
+#game-main-output div {
+    white-space: pre-wrap;
+}
+
+#game-main-hands {
+    height: 28px;
+    text-indent: 20px;
+    line-height: 28px;
     margin-top: 3px;
 }
 
-#command {
-    width: 100%;
-    margin: 0;
-    position: relative;
+#game-hands-left {
+    background: url('/asset/img/left_hand.png') no-repeat;
+    height: 28px;
 }
 
-#command input {
-    position: relative;
-    z-index: 2;
-    left: 0;
-    top: 0;
-    background-color: #0c0c0c;
-    border: 1px solid #5e5e5e;
-    color: #ccc;
-    opacity: 0.8;
-    border-radius: 4px;
+#game-hands-right {
+    background: url('/asset/img/right_hand.png') no-repeat;
+    height: 28px;
 }
 
-#command input:focus {
-    border: 1px solid #5e5e5e;
+#game-hands-spell {
+    background: url('/asset/img/spell_ready.png') no-repeat;
+    height: 28px;
 }
 
-#command progress {
-    position: absolute;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    height: 34px;
-    border-radius: 4px;
-    width: 100%;
+/* Roundtime bars */
+#game-main-counter progress {
+    background-color: black;
+    border: 0;
+    height: 5px;
 }
 
-#command progress::-webkit-progress-bar {
-    border-radius: 4px;
+#game-main-counter progress::-webkit-progress-bar {
+    background: #212121;
 }
 
-#command progress::-webkit-progress-value {
-    border-radius: 4px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25) inset;
-}
-
-#command progress.hard::-webkit-progress-value {
+#game-main-counter progress::-webkit-progress-value {
     background: darkred;
 }
 
-#command progress.soft::-webkit-progress-value {
+/* Command input */
+#game-main-command input {
+    background-color: #212121;
+}
+
+#game-main-command input:focus {
+    border: 1px solid #5e5e5e;
+}
+
+/* Status Indicators (health, mana, etc) */
+#game-main-status {
+    height: 18px;
+}
+
+#status {
+    justify-content: center;
+}
+
+#status span i {
+    position: relative;
+    top: -18px;
+    margin-bottom: -14px;
+    display: block;
+    font-size: 14px;
+    font-weight: bold;
+    color: white;
+    left: 4px;
+}
+
+#status span progress {
+    height: 18px;
+}
+
+#status .health progress::-webkit-progress-value {
+    background: darkred;
+    padding-left: 0;
+}
+
+#status .mana progress::-webkit-progress-value {
     background: darkblue;
 }
 
-#command progress.stun::-webkit-progress-value {
+#status .stamina progress::-webkit-progress-value {
     background: yellow;
 }
 
-#extra {
-    flex: 0.25;
-    padding-left: 10px;
-    width: 100%;
-}
-
-.status {
-    margin-top: 5px;
-    font-size: 12px;
-    text-align: center;
-}
-
-#indicators {
-    background-color: #000;
-    padding: 0 0 0 2px;
-}
-
-#indicators img {
-    vertical-align: baseline;
-}
-
-#indicators .off {
-    color: #000;
-}
-
-#position-img, #visibility-img {
-    width: 28px;
-    height: 28px;
-    margin-top: 2px;
-}
-
-.status div {
-    padding-left: 2px;
-    padding-right: 2px;
-}
-
-.status div i {
-    position: relative;
-    top: -17px;
-    margin-bottom: -17px;
-    display: block;
-}
-
-.status .stamina {
+#status div.stamina span i {
     color: black;
-    font-weight: bold;
 }
 
-progress {
-    color: #0063a6;
-    border: 1px solid #5e5e5e;
-    background: #fff;
-    border-radius: 4px;
-    height: 15px;
+#status .mindState {
+    color: purple;
+    margin-bottom: 5px;
+}
+
+#status .pbarStance {
+    color: lightgrey;
+    margin-bottom: 5px;
+}
+
+/* Header */
+#header {
+    -webkit-app-region: drag;
+}
+
+#header .nav {
+    -webkit-app-region: no-drag;
+}
+
+#header-window-controls {
+    margin-left: 15px;
+}
+
+#header-window-controls img {
+    cursor: pointer;
     -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
+    border: 1px solid #000;
+    border-radius: 5px;
     box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
-    width: 100%;
+    -webkit-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+}
+
+#header-window-controls img:hover {
+    border: 1px solid #5e5e5e;
 }
