--- a/app/view/game.html
+++ b/app/view/game.html
@@ -5,6 +5,7 @@
 <div layout="row" flex>
     <div layout="column" flex="10">
         <md-content id="logons-window" flex class="md-padding" fe-auto-scroll ng-model="logons"></md-content>
+
         <div id="status" ng-controller="StatusCtrl">
             <div class="health">
                 <progress value="{{ status.health.current }}" max="{{ status.health.max }}"></progress>
@@ -28,32 +29,46 @@
             </div>
             <div class="encumlevel">
                 <progress value="{{ status.encumlevel.current }}" max="{{ status.encumlevel.max }}"></progress>
-                <output>encumbrance:</output> <output>{{ status.encumlevel.current }}%</output>
+                <output>encum:</output> <output>{{ status.encumlevel.current }}%</output>
             </div>
             <div class="spirit">
                 <progress value="{{ status.spirit.current }}" max="{{ status.spirit.max }}"></progress>
                 <output>spirit:</output> <output>{{ status.spirit.current }}</output>
             </div>
         </div>
+
+        <div id="indicators" ng-controller="IndicatorCtrl">
+            <div layout="row">
+                <i flex="50" ng-class="{ standing: standing, kneeling: kneeling, sitting: sitting, prone: prone }" class="fa fa-lg">
+                    <img id="position-img" src="/asset/img/standing.png">
+                </i>
+
+                <i flex="50" ng-class="{ stealthed: hidden, invisible: invisible }" class="fa fa-lg">
+                    <img id="visibility-img" src="/asset/img/1x1-pixel.png">
+                </i>
+            </div>
+
+            <div layout="row">
+                <i flex="33" ng-class="{off: !bleeding}" class="bleeding fa fa-2x fa-tint"></i>
+
+                <i flex="33" ng-class="{off: !diseased}" class="diseased fa fa-2x fa-tint"></i>
+
+                <i flex="33" ng-class="{off: !poisoned}" class="poisoned fa fa-2x fa-tint"></i>
+            </div>
+        </div>
     </div>
     <md-content id="game-window" flex fe-auto-scroll ng-model="game" class="md-padding"></md-content>
 </div>
 <div layout="column">
-    <!--<div ng-controller="IndicatorCtrl" id="indicators" layout="row">
-        <output ng-class="{ standing: standing, kneeling: kneeling, sitting: sitting, prone: prone }" class="fa fa-lg">
-            <outputmg id="position-img" src="/asset/outputmg/1x1-pixel.png">
-        </output>
-        <output ng-class="{ stealthed: hidden, invisible: invisible }" class="fa fa-lg">
-            <outputmg id="visibility-img" src="/asset/outputmg/1x1-pixel.png">
-        </output>
-        <output ng-class="{off: !bleeding}" class="bleeding fa fa-tint fa-2x">&nbsp;&nbsp;</output>
-        <output ng-class="{off: !diseased}" class="diseased fa fa-tint fa-2x">&nbsp;&nbsp;</output>
-        <output ng-class="{off: !poisoned}" class="poisoned fa fa-tint fa-2x">&nbsp;&nbsp;</output>
-    </div>-->
-
     <div id="entry" layout="row">
         <progress ng-controller="CounterCtrl" class="{{ type }}" value="{{ roundtime }}" max="{{ max }}"></progress>
-        <input flex ng-model="command" type="text" autofocus="autofocus" placeholder="command..." ng-controller="CommandCtrl"
+        <input id="command-input"
+               flex
+               ng-model="command"
+               type="text"
+               autofocus="autofocus"
+               placeholder="command..."
+               ng-controller="CommandCtrl"
                ui-keydown="{
               'down':'down($event)',
               'up':'up($event)',
